# squint

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Dockerfile.gcc-dev  Dockerfile.llvm-dev  Dockerfile.msvc-dev  LICENSE  README.md  TODO.md  compile.py  element_wise_addition.cuh  main-CMakeLists.txt  main.cpp  main.cu  notes.txt  repomap.txt  requirements.txt  tensor.py
.devcontainer/: Dockerfile  devcontainer.json  env.yml
.github/workflows/: build_and_test.yml  ci.yml  docs.yml  test.yml
docs/: Doxyfile.in  advanced_features.rst  advanced_usage.rst  api_reference.rst  basic_usage.rst  building_and_testing.rst  changelog.rst  conf.py  contributing.rst  core_components.rst  geometry.rst  gpu_tensors.rst  index.rst  installation.rst  introduction.rst  key_features.rst  performance_considerations.rst  quickstart.rst  squint_tensor_library.rst  table_of_contents.rst  tensors.rst  todo.rst  units.rst  usage.rst
docs/_static/: custom.css
docs/api/: core.rst  geometry.rst  quantity.rst  tensor.rst  util.rst
docs/api/core/: concepts.rst  error_checking.rst  layout.rst  memory.rst
docs/api/geometry/: projections.rst  transformations.rst
docs/api/linalg/: blas_interface.rst  lapack_interface.rst  matrix_ops.rst  vector_ops.rst
docs/api/quantity/: constants.rst  dimension.rst  math.rst  quantity.rst  unit.rst
docs/api/tensor/: dynamic_tensor.rst  fixed_tensor.rst  tensor_base.rst  tensor_ops.rst  tensor_view.rst
docs/api/util/: array_utils.rst  math_utils.rst  type_traits.rst
docs/or_a_specific_tag/: commit.rst
examples/: matrix_inverse.cpp
include/squint/: core.hpp  dimension.hpp  dynamic_tensor.hpp  fixed_tensor.hpp  geometry.hpp  gpu_tensor.hpp  iterable_tensor.hpp  linalg.hpp  linear_algebra.hpp  linear_algebra_fallback.hpp  newtensor.hpp  quantity.hpp  squint.hpp  tensor.hpp  tensor_base.hpp  tensor_view.hpp
include/squint/core/: concepts.hpp  error_checking.hpp  layout.hpp  memory.hpp  types.hpp
include/squint/geometry/: projections.hpp  transformations.hpp
include/squint/linalg/: blas_interface.hpp  lapack_interface.hpp  matrix_ops.hpp  vector_ops.hpp
include/squint/quantity/: constants.hpp  dimension.hpp  dimension_types.hpp  math.hpp  quantity.hpp  quantity_math.hpp  quantity_ops.hpp  quantity_types.hpp  unit.hpp  unit_dsl.hpp  unit_literals.hpp  unit_types.hpp  units.hpp
include/squint/tensor/: blas_backend.hpp  blas_backend_none.hpp  dynamic_tensor.hpp  element_wise_ops.hpp  fixed_tensor.hpp  flat_iterator.hpp  iterable_tensor.hpp  scalar_ops.hpp  subview_iterator.hpp  tensor.hpp  tensor_accessors.hpp  tensor_assignment.hpp  tensor_base.hpp  tensor_constructors.hpp  tensor_conversions.hpp  tensor_creation.hpp  tensor_element_access.hpp  tensor_io.hpp  tensor_iteration.hpp  tensor_math.hpp  tensor_op_compatibility.hpp  tensor_ops.hpp  tensor_shape_manipulation.hpp  tensor_testing.hpp  tensor_types.hpp  tensor_view.hpp  tensor_view_operations.hpp
include/squint/tensor/cuda/: cuda_context.hpp  element_wise.hpp  scalar.hpp
include/squint/util/: array_utils.hpp  math_utils.hpp  sequence_utils.hpp  type_traits.hpp
include/squint_old/: core.hpp  dimension.hpp  fixed_tensor.hpp  geometry.hpp  linear_algebra.hpp  linear_algebra_fallback.hpp  tensor.hpp  tensor_base.hpp
old/include/squint/: newtensor.hpp  optimize.hpp
old/samples/: main.cpp  sample1.cpp  sample2.cpp
scripts/: combine_files.py  gen_docs.py  tensor.py  test.py
src/: dimension.cpp  linalg.cpp  optimize.cpp  quantity.cpp  squint.cpp  tensor.cpp
src/tensor/cuda/: element_wise.cu  scalar.cu
tests/: dimension_tests.cpp  geometry_tests.cpp  linalg_tests.cpp  math_tests.cpp  quantity_tests.cpp  sample.cpp  tensor_math_tests.cpp  tensor_ops_tests.cpp  tensor_tests.cpp  tests.cpp  unit_tests.cpp
tests/old/: geometry_tests_old.cpp
tests/samples/: sample1.cpp
